--- a/jekyll/index.html
+++ b/jekyll/index.html
@@ -1,10 +1,13 @@
 ---
 layout: default
-title: Homepage
+title: Minesweeper
 rootPath: ./
 name: home
 ---
-
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus id porttitor metus, vel cursus sapien. Sed consequat aliquam mi, non ullamcorper augue eleifend dignissim. Nullam laoreet vel urna in viverra. Nam venenatis ullamcorper dapibus. Etiam vulputate, sapien eu convallis tincidunt, ipsum erat fringilla ipsum, et aliquet quam turpis vel justo. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Sed libero dui, aliquam sed ultrices non, fringilla quis risus. Etiam vel orci ultrices, aliquet justo at, consequat urna. Nulla dapibus sem nec dignissim semper. Quisque interdum nisl neque, et pretium leo rutrum eget.</p>
-
-<p>Aliquam erat volutpat. Praesent eget orci id risus vulputate pretium quis ac turpis. Mauris quis tortor enim. Mauris aliquet est dui, quis blandit velit facilisis vitae. Mauris viverra tristique ornare. In hac habitasse platea dictumst. In vitae lorem ante. Integer non mauris tellus. Aenean tristique tellus ac sollicitudin vulputate. Proin sed porttitor diam, sit amet ullamcorper dui. Suspendisse suscipit non arcu id vulputate.</p>
+<div class="btn-container">
+	<div class="button bg-blue" data-new><span class="icon-plus"></span> New Game</div>
+	<div class="button bg-green" data-verify><span class="icon-checkmark"></span> Verify</div>
+	<div class="button bg-orange" data-cheat><span class="icon-evil"></span> Cheat</div>
+</div>
+<div class="grid" data-ms="board" data-width="8" data-height="8" data-nbmines="10"></div>
+<h3 data-message></h3>
